--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <h1>Snake!!</h1>
     <canvas id="canvas" width="300px" height="300px"></canvas>
-    <button id="start">Start</button>
+    <div>
+        <button id="startBtn" class="btn">Start</button>
+        <button id="refreshBtn" class="btn">Refresh</button>
+    </div>
+    <p id="gameover" class="gameover">GAME OVER</p>
     <script type="module" src="script.js"></script>
 </body>
 
